write indv json file

--- a/hamentorwrite.ipynb
+++ b/hamentorwrite.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Hamilton Mentor Write\n",
+    "<h3>Hamilton Mentor Write</h3>\n",
     "\n",
     "Script to write login of Hamilton Computer Mentors.\n",
     "\n",
@@ -16,27 +16,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 69,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "import arrow"
+    "import arrow\n",
+    "import json\n",
+    "import os"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 70,
    "metadata": {
     "collapsed": false
    },
@@ -47,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 71,
    "metadata": {
     "collapsed": false
    },
@@ -58,16 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 72,
    "metadata": {
     "collapsed": false
    },
@@ -75,10 +59,10 @@
     {
      "data": {
       "text/plain": [
-       "'11:17:39.120242'"
+       "'15:21:22.687083'"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 72,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -89,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 73,
    "metadata": {
     "collapsed": false
    },
@@ -100,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 74,
    "metadata": {
     "collapsed": true
    },
@@ -111,7 +95,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 75,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Name: William\n"
+     ]
+    }
+   ],
+   "source": [
+    "myname = input('Name: ')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
    "metadata": {
     "collapsed": true
    },
@@ -122,18 +125,99 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 77,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Type of help given: helped with cv\n"
+     ]
+    }
+   ],
+   "source": [
+    "typehelp = input('Type of help given: ')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Device: tablet\n"
+     ]
+    }
+   ],
+   "source": [
+    "devtype = input('Device: ')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Comments: today i helped lots of people\n"
+     ]
+    }
+   ],
+   "source": [
+    "fincomments = input('Comments: ')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "defdict = {'startdatetime' : thedate + ' ' + startime, 'enddatetime' : thedate + ' ' + endtime, 'library' : 'GP'}"
+    "anodict = dict()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 81,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "defdict = {'name' : myname, 'startdatetime' : thedate + ' ' + startime, 'enddatetime' : thedate + ' ' + endtime, \n",
+    "           'library' : 'GP', 'help count' : int(pplhelped), 'help' : typehelp, 'device' : devtype, \n",
+    "           'comments': fincomments}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "valddict = defdict.values()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
    "metadata": {
     "collapsed": false
    },
@@ -141,109 +225,109 @@
     {
      "data": {
       "text/plain": [
-       "{'enddatetime': '2015-10-14 15:00:00',\n",
-       " 'library': 'GP',\n",
-       " 'startdatetime': '2015-10-14 13:00:00'}"
+       "dict_values(['GP', 'tablet', 3, 'William', 'helped with cv', '2015-10-14 13:00:00', 'today i helped lots of people', '2015-10-14 15:00:00'])"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 83,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "defdict"
+    "valddict"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "What I want to do is take this dict and create columns out of the keys and rows of values under the column. \n",
+    "\n",
+    "Could this perhaps works as an api - saving the latest as 0.\n",
+    "\n",
+    "Create a json file that the json object is saved to. This script opens the json file and appends the new json object to it. It counts how many are already in the json file and assigns a +1 to it. \n",
+    "\n",
+    "For now could just check hamcommen for amount of json objects and create a new +1\n",
+    "\n",
+    "Not happy with creating lots of .json files in the folder, but whatever this will do for now. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 84,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "lishamcomen = os.listdir('/home/wcmckee/hamcommen/')"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 85,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "lecomen = len(lishamcomen)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 86,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "newlecom = lecomen + 1"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 90,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "wthamcom = open('/home/wcmckee/hamcommen/index' + str(newlecom) + '.json', 'w')"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 91,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "222"
+      ]
+     },
+     "execution_count": 91,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "wthamcom.write(json.dumps(defdict))"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 93,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
+   "source": [
+    "wthamcom.close()"
+   ]
   }
  ],
  "metadata": {
