--- a/nzpostaddy.ipynb
+++ b/nzpostaddy.ipynb
@@ -26,7 +26,25 @@
     "\n",
     "Convert full country name to country code\n",
     "\n",
-    "Give unique code to street that can be looked up \n"
+    "Give unique code to street that can be looked up \n",
+    "\n",
+    "What schools are in the area? \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 302,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "import json\n",
+    "import shutil\n",
+    "import requests\n",
+    "import svgwrite\n",
+    "import arrow\n",
+    "\n"
    ]
   },
   {
@@ -37,23 +55,6 @@
    },
    "outputs": [],
    "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 168,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "import json\n",
-    "import shutil\n",
-    "import requests\n",
-    "import svgwrite\n",
-    "import crypto\n",
-    "\n",
-    "\n"
-   ]
   },
   {
    "cell_type": "code",
@@ -1319,6 +1320,284 @@
    "source": [
     "weighrate['services'][0]"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 290,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "oppizza = open('/home/wcmckee/github/pizzadelivpost.json', 'r')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 291,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "pizrd = oppizza.read()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 303,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "nowtime = arrow.now()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 305,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'2015-10-23 13:20:04.592816+13:00'"
+      ]
+     },
+     "execution_count": 305,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "str(nowtime.datetime)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 306,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "adval = dict({'address': fulladdress, 'datetime' : str(nowtime.datetime)})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 307,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'address': '71 Oregon Street, Ocean Grove, Dunedin 9013, New Zealand',\n",
+       " 'datetime': '2015-10-23 13:20:04.592816+13:00'}"
+      ]
+     },
+     "execution_count": 307,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "adval"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 301,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'collectionId': '9ef2a17d-bd70-328d-7ab4-ff404f411a27',\n",
+       "  'data': [{'key': 'accountID', 'type': 'text', 'value': 'phimc2api'},\n",
+       "   {'key': 'accountPW', 'type': 'text', 'value': 'fs112358'},\n",
+       "   {'key': 'version', 'type': 'text', 'value': '2.0'},\n",
+       "   {'key': 'appsource', 'type': 'text', 'value': 'Android'},\n",
+       "   {'key': 'appversion', 'type': 'text', 'value': '2.1.2'},\n",
+       "   {'key': 'request', 'type': 'text', 'value': 'HTMLOrder'},\n",
+       "   {'key': 'data',\n",
+       "    'type': 'text',\n",
+       "    'value': '{\"sessionToken\":\"zDmPoTjzLOd8E8YYLxsFy0MPwQE7LKo19FmFxyZDQFSRRzfRd1LE48xCCj5k3PwC\",\"unitID\":\"029704\",\"occasion\":\"C\",\"location_index\":-1,\"action\":\"start\"}'}],\n",
+       "  'dataMode': 'urlencoded',\n",
+       "  'description': '',\n",
+       "  'headers': '',\n",
+       "  'id': '2b852493-f523-f119-b22e-66189f55d09c',\n",
+       "  'method': 'POST',\n",
+       "  'name': 'getHtmlOrder',\n",
+       "  'time': 1433811561494,\n",
+       "  'timestamp': 0,\n",
+       "  'url': 'https://quikorder.pizzahut.com/phorders3/service.php',\n",
+       "  'version': 2},\n",
+       " {'collectionId': '9ef2a17d-bd70-328d-7ab4-ff404f411a27',\n",
+       "  'data': [{'key': 'accountID', 'type': 'text', 'value': 'phimc2api'},\n",
+       "   {'key': 'accountPW', 'type': 'text', 'value': 'fs112358'},\n",
+       "   {'key': 'version', 'type': 'text', 'value': '2.0'},\n",
+       "   {'key': 'appsource', 'type': 'text', 'value': 'Android'},\n",
+       "   {'key': 'appversion', 'type': 'text', 'value': '2.1.2'},\n",
+       "   {'key': 'request', 'type': 'text', 'value': 'FindNearByAddress'},\n",
+       "   {'key': 'data', 'type': 'text', 'value': '{\"customer_zip\": \"32820\"}'}],\n",
+       "  'dataMode': 'urlencoded',\n",
+       "  'description': '',\n",
+       "  'headers': '',\n",
+       "  'id': '5fc79717-503b-c4eb-f50c-c954bd82313f',\n",
+       "  'method': 'POST',\n",
+       "  'name': 'findNearbyAddress',\n",
+       "  'responses': [],\n",
+       "  'timestamp': 0,\n",
+       "  'url': 'https://quikorder.pizzahut.com/phorders3/service.php',\n",
+       "  'version': 2},\n",
+       " {'collectionId': '9ef2a17d-bd70-328d-7ab4-ff404f411a27',\n",
+       "  'data': [{'key': 'accountID', 'type': 'text', 'value': 'phimc2api'},\n",
+       "   {'key': 'accountPW', 'type': 'text', 'value': 'fs112358'},\n",
+       "   {'key': 'version', 'type': 'text', 'value': '2.0'},\n",
+       "   {'key': 'appsource', 'type': 'text', 'value': 'Android'},\n",
+       "   {'key': 'appversion', 'type': 'text', 'value': '2.1.2'},\n",
+       "   {'key': 'request', 'type': 'text', 'value': 'GenerateTempAccount'},\n",
+       "   {'key': 'data',\n",
+       "    'type': 'text',\n",
+       "    'value': '{\"address\":{\"street_address\":\"16873 E. Colonial Dr.\",\"apartment\":\"\",\"city\":\"Orlando\",\"state\":\"FL\",\"zip\":\"32820\"}}'}],\n",
+       "  'dataMode': 'urlencoded',\n",
+       "  'description': '',\n",
+       "  'headers': '',\n",
+       "  'id': '7a719f0b-7a69-7adf-e77f-545f7a824712',\n",
+       "  'method': 'POST',\n",
+       "  'name': 'generateTempAccount',\n",
+       "  'time': 1433809230725,\n",
+       "  'timestamp': 0,\n",
+       "  'url': 'https://quikorder.pizzahut.com/phorders3/service.php',\n",
+       "  'version': 2},\n",
+       " {'collectionId': '9ef2a17d-bd70-328d-7ab4-ff404f411a27',\n",
+       "  'data': [{'key': 'accountID', 'type': 'text', 'value': 'phimc2api'},\n",
+       "   {'key': 'accountPW', 'type': 'text', 'value': 'fs112358'},\n",
+       "   {'key': 'version', 'type': 'text', 'value': '2.0'},\n",
+       "   {'key': 'appsource', 'type': 'text', 'value': 'Android'},\n",
+       "   {'key': 'appversion', 'type': 'text', 'value': '2.1.2'},\n",
+       "   {'key': 'request', 'type': 'text', 'value': 'GetMenuItems'},\n",
+       "   {'key': 'data',\n",
+       "    'type': 'text',\n",
+       "    'value': '{\"unitID\":\"997\",\"occasion\":\"D\",\"section\":\"category\",\"subsection\":\"APICAROUSEL\"}'}],\n",
+       "  'dataMode': 'urlencoded',\n",
+       "  'description': '',\n",
+       "  'headers': '',\n",
+       "  'id': '97358452-70d5-dded-48e0-cd4e9f90285b',\n",
+       "  'method': 'POST',\n",
+       "  'name': 'getCarouselItems',\n",
+       "  'time': 1433040064599,\n",
+       "  'timestamp': 0,\n",
+       "  'url': 'https://quikorder.pizzahut.com/phorders3/service.php',\n",
+       "  'version': 2}]"
+      ]
+     },
+     "execution_count": 301,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "json.loads(pizrd)['requests']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
