auspo delivery times

--- a/nzpostaddy.ipynb
+++ b/nzpostaddy.ipynb
@@ -32,7 +32,494 @@
     "\n",
     "Booking system for school parcel pickup\n",
     "\n",
-    "Send parcels to every school in the country.\n"
+    "Send parcels to every school in the country.\n",
+    "\n",
+    " How to qualify for Bulk Mail discounts\n",
+    "\n",
+    "To qualify for Bulk Mail discounts, there are a few things you’ll need to consider:\n",
+    "\n",
+    "    Are the addresses in your database accurate against the Postal Address File (PAF)? Refer to validate customer addresses for further information.\n",
+    "    Have you used the correct address and envelope format and layout?\n",
+    "    Are your items sorted by postcode?\n",
+    "\n",
+    "Getting\n",
+    "your\n",
+    "mail\n",
+    "If\n",
+    "you\n",
+    "want\n",
+    "your\n",
+    "mail\n",
+    "to\n",
+    "reach\n",
+    "its\n",
+    "destination\n",
+    "as\n",
+    "quickly\n",
+    "and\n",
+    "accurately\n",
+    "as\n",
+    "possible,\n",
+    "this\n",
+    "brochure\n",
+    "is\n",
+    "for\n",
+    "you!\n",
+    "\n",
+    "\n",
+    "It’s\n",
+    "a\n",
+    "quick\n",
+    "rundown\n",
+    "on\n",
+    "how\n",
+    "to\n",
+    "address\n",
+    "all\n",
+    "your\n",
+    "mail\n",
+    "so\n",
+    "it’s\n",
+    "processed\n",
+    "and\n",
+    "delivered\n",
+    "by\n",
+    "New\n",
+    "Zealand\n",
+    "Post\n",
+    "in\n",
+    "the\n",
+    "fastest\n",
+    "possible\n",
+    "time\n",
+    "–\n",
+    "and\n",
+    "gets\n",
+    "delivered\n",
+    "to\n",
+    "the\n",
+    "right\n",
+    "address,\n",
+    "whether\n",
+    "it’s\n",
+    "a\n",
+    "street\n",
+    "address\n",
+    "with\n",
+    "a\n",
+    "suburb\n",
+    "and\n",
+    "town,\n",
+    "Rural\n",
+    "Delivery\n",
+    "address,\n",
+    "New\n",
+    "Zealand\n",
+    "Post\n",
+    "PO\n",
+    "Box\n",
+    "or\n",
+    "Private\n",
+    "Bag.\n",
+    "The\n",
+    "brochure\n",
+    "covers\n",
+    "every\n",
+    "type\n",
+    "of\n",
+    "postal\n",
+    "address,\n",
+    "from\n",
+    "apartments\n",
+    "to\n",
+    "farms,\n",
+    "and\n",
+    "includes\n",
+    "handy\n",
+    "examples\n",
+    "of\n",
+    "how\n",
+    "to\n",
+    "get\n",
+    "your\n",
+    "addressing\n",
+    "right.\n",
+    "If\n",
+    "you’d\n",
+    "like\n",
+    "more\n",
+    "detailed\n",
+    "information\n",
+    "on\n",
+    "addressing\n",
+    "standards,\n",
+    "check\n",
+    "out\n",
+    "our\n",
+    "full\n",
+    "‘Address\n",
+    "Standards’\n",
+    "publication,\n",
+    "which\n",
+    "you\n",
+    "can\n",
+    "find\n",
+    "at\n",
+    "www.nzpost.co.nz/addressing\n",
+    "Addresses\n",
+    "in\n",
+    "New\n",
+    "Zealand\n",
+    "–\n",
+    "how\n",
+    "they\n",
+    "work\n",
+    "Line\n",
+    "Content\n",
+    "Examples\n",
+    "Reference\n",
+    "This\n",
+    "contains\n",
+    "FreePost\n",
+    "or\n",
+    "other\n",
+    "reference\n",
+    "information,\n",
+    "such\n",
+    "as\n",
+    "a\n",
+    "customer\n",
+    "account\n",
+    "number.\n",
+    "It’s\n",
+    "mandatory\n",
+    "for\n",
+    "non-approved\n",
+    "FreePost\n",
+    "mail.\n",
+    "Customer\n",
+    "767676\n",
+    "FreePost\n",
+    "2354\n",
+    "Recipient\n",
+    "The\n",
+    "name\n",
+    "of\n",
+    "the\n",
+    "person\n",
+    "and/or\n",
+    "organisation\n",
+    "to\n",
+    "whom\n",
+    "you’re\n",
+    "addressing\n",
+    "the\n",
+    "mail.\n",
+    "You\n",
+    "can\n",
+    "split\n",
+    "this\n",
+    "information\n",
+    "over\n",
+    "several\n",
+    "lines.\n",
+    "(See\n",
+    "‘Basic\n",
+    "rural\n",
+    "addresses’\n",
+    "and\n",
+    "‘PO\n",
+    "Box,\n",
+    "Private\n",
+    "Bag\n",
+    "and\n",
+    "Counter\n",
+    "Delivery\n",
+    "addresses’\n",
+    "for\n",
+    "situations\n",
+    "where\n",
+    "this\n",
+    "line\n",
+    "is\n",
+    "mandatory.)\n",
+    "Mrs\n",
+    "S\n",
+    "Jones\n",
+    "The\n",
+    "Carpet\n",
+    "Factory\n",
+    "Unit\n",
+    "A\n",
+    "unit\n",
+    "(flat,\n",
+    "suite\n",
+    "etc)\n",
+    "and/or\n",
+    "floor.\n",
+    "It\n",
+    "can\n",
+    "also\n",
+    "include\n",
+    "a\n",
+    "building\n",
+    "name.\n",
+    "This\n",
+    "line\n",
+    "is\n",
+    "mandatory\n",
+    "if\n",
+    "the\n",
+    "floor\n",
+    "detail\n",
+    "is\n",
+    "needed\n",
+    "to\n",
+    "identify\n",
+    "the\n",
+    "delivery\n",
+    "point.\n",
+    "It’s\n",
+    "not\n",
+    "used\n",
+    "for\n",
+    "PO\n",
+    "Box,\n",
+    "Private\n",
+    "Bag\n",
+    "and\n",
+    "Counter\n",
+    "Delivery\n",
+    "addresses.\n",
+    "Level\n",
+    "2,\n",
+    "Mason\n",
+    "House\n",
+    "Suite\n",
+    "10,\n",
+    "Mason\n",
+    "House\n",
+    "Flat\n",
+    "2,\n",
+    "Mason\n",
+    "House\n",
+    "Building\n",
+    "name\n",
+    "The\n",
+    "building\n",
+    "name\n",
+    "is\n",
+    "required\n",
+    "on\n",
+    "this\n",
+    "line\n",
+    "by\n",
+    "itself,\n",
+    "only\n",
+    "if\n",
+    "there’s\n",
+    "no\n",
+    "known\n",
+    "street\n",
+    "number\n",
+    "for\n",
+    "the\n",
+    "address.\n",
+    "It’s\n",
+    "not\n",
+    "used\n",
+    "for\n",
+    "PO\n",
+    "Box,\n",
+    "Private\n",
+    "Bag\n",
+    "and\n",
+    "Counter\n",
+    "Delivery\n",
+    "addresses.\n",
+    "Mason\n",
+    "House\n",
+    "Delivery\n",
+    "Mandatory\n",
+    "Urban\n",
+    "and\n",
+    "rural\n",
+    "addresses\n",
+    "must\n",
+    "include\n",
+    "the\n",
+    "street\n",
+    "name.\n",
+    "This\n",
+    "line\n",
+    "can\n",
+    "also\n",
+    "contain:\n",
+    "•\n",
+    "a\n",
+    "street\n",
+    "number\n",
+    "and\n",
+    "letter\n",
+    "(alpha)\n",
+    "before\n",
+    "the\n",
+    "street\n",
+    "name\n",
+    "•\n",
+    "a\n",
+    "unit\n",
+    "and\n",
+    "unit\n",
+    "separator\n",
+    "‘/’\n",
+    "before\n",
+    "the\n",
+    "street\n",
+    "number\n",
+    "•\n",
+    "the\n",
+    "street\n",
+    "type\n",
+    "and/or\n",
+    "street\n",
+    "direction\n",
+    "after\n",
+    "the\n",
+    "street\n",
+    "name.\n",
+    "Delivery\n",
+    "Service\n",
+    "addresses\n",
+    "must\n",
+    "contain\n",
+    "one\n",
+    "of\n",
+    "‘PO\n",
+    "Box’,\n",
+    "‘Private\n",
+    "Bag’,\n",
+    "‘Response\n",
+    "Bag’,\n",
+    "‘CMB’\n",
+    "(Community\n",
+    "Mail\n",
+    "Box),\n",
+    "‘Counter\n",
+    "Delivery’,\n",
+    "or\n",
+    "‘Poste\n",
+    "Restante’.\n",
+    "This\n",
+    "is\n",
+    "followed\n",
+    "by\n",
+    "the\n",
+    "delivery\n",
+    "service\n",
+    "identifier\n",
+    "(usually\n",
+    "a\n",
+    "number)\n",
+    "if\n",
+    "New\n",
+    "Zealand\n",
+    "Post\n",
+    "has\n",
+    "allocated\n",
+    "one.\n",
+    "19A\n",
+    "Buckley\n",
+    "Road\n",
+    "2B/54\n",
+    "Terrace\n",
+    "Street\n",
+    "12\n",
+    "Sydney\n",
+    "Street\n",
+    "North\n",
+    "PO\n",
+    "Box\n",
+    "23226\n",
+    "Private\n",
+    "Bag\n",
+    "39990\n",
+    "Suburb\n",
+    "The\n",
+    "suburb\n",
+    "line\n",
+    "may\n",
+    "contain:\n",
+    "•\n",
+    "the\n",
+    "suburb\n",
+    "name\n",
+    "for\n",
+    "an\n",
+    "urban\n",
+    "address,\n",
+    "or\n",
+    "•\n",
+    "‘RD’\n",
+    "followed\n",
+    "by\n",
+    "the\n",
+    "RD\n",
+    "number\n",
+    "for\n",
+    "rural\n",
+    "or\n",
+    "rural\n",
+    "CMB\n",
+    "addresses,\n",
+    "or\n",
+    "•\n",
+    "the\n",
+    "box\n",
+    "lobby\n",
+    "for\n",
+    "a\n",
+    "PO\n",
+    "Box\n",
+    "address,\n",
+    "or\n",
+    "•\n",
+    "the\n",
+    "PostShop\n",
+    "or\n",
+    "PostCentre\n",
+    "name\n",
+    "for\n",
+    "a\n",
+    "Counter\n",
+    "Delivery\n",
+    "address.\n",
+    "‘Basic\n",
+    "urban\n",
+    "addresses’,\n",
+    "‘Basic\n",
+    "rural\n",
+    "addresses’\n",
+    "and\n",
+    "‘PO\n",
+    "Box,\n",
+    "Private\n",
+    "Bag\n",
+    "and\n",
+    "Counter\n",
+    "Delivery\n",
+    "addresses’\n",
+    "cover\n",
+    "situations\n",
+    "where\n",
+    "the\n",
+    "suburb\n",
+    "line\n",
+    "is\n",
+    "mandatory\n",
+    "or\n",
+    "not\n",
+    "used"
    ]
   },
   {
@@ -3550,12 +4037,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 187,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "import xmltodict"
+   ]
   },
   {
    "cell_type": "code",
@@ -3568,93 +4057,170 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 198,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "opstorehr = open('/home/wcmckee/github/auspostdelivtime.xml', 'r')"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 199,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "stordz = opstorehr.read()"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 200,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'<?xml version=\"1.0\" encoding=\"UTF-8\" standalone=\"yes\"?>\\n<DeliveryTimeslots \\n    xmlns=\"http://api.auspost.com.au/DeliveryTimeslots:v1\">\\n    <DayTimeslot>\\n        <Weekday>2</Weekday>\\n        <WeekdayDescription>Tuesday</WeekdayDescription>\\n        <TimePeriod>\\n            <StartTime>07:00:00</StartTime>\\n            <EndTime>12:00:00</EndTime>\\n            <Duration>PT5H</Duration>\\n            <TimePeriodName>AM</TimePeriodName>\\n        </TimePeriod>\\n        <TimePeriod>\\n            <StartTime>12:00:00</StartTime>\\n            <EndTime>17:00:00</EndTime>\\n            <Duration>PT5H</Duration>\\n            <TimePeriodName>PM</TimePeriodName>\\n        </TimePeriod>\\n        <TimePeriod>\\n            <StartTime>09:00:00</StartTime>\\n            <EndTime>11:00:00</EndTime>\\n            <Duration>PT2H</Duration>\\n            <TimePeriodName>9 AM - 11 AM</TimePeriodName>\\n        </TimePeriod>\\n        <TimePeriod>\\n            <StartTime>11:00:00</StartTime>\\n            <EndTime>13:00:00</EndTime>\\n            <Duration>PT2H</Duration>\\n            <TimePeriodName>11 AM - 1 PM</TimePeriodName>\\n        </TimePeriod>\\n        <TimePeriod>\\n            <StartTime>13:00:00</StartTime>\\n            <EndTime>15:00:00</EndTime>\\n            <Duration>PT2H</Duration>\\n            <TimePeriodName>1 PM - 3 PM</TimePeriodName>\\n        </TimePeriod>\\n        <TimePeriod>\\n            <StartTime>15:00:00</StartTime>\\n            <EndTime>17:00:00</EndTime>\\n            <Duration>PT2H</Duration>\\n            <TimePeriodName>3 PM - 5 PM</TimePeriodName>\\n        </TimePeriod>\\n        <TimePeriod>\\n            <StartTime>17:00:00</StartTime>\\n            <EndTime>19:00:00</EndTime>\\n            <Duration>PT2H</Duration>\\n            <TimePeriodName>5 PM - 7 PM</TimePeriodName>\\n        </TimePeriod>\\n    </DayTimeslot>\\n</DeliveryTimeslots>\\n'"
+      ]
+     },
+     "execution_count": 200,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "stordz"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 201,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "opsth = xmltodict.parse(stordz)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 207,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "daydevly = opsth['DeliveryTimeslots']['DayTimeslot']"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 209,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'2'"
+      ]
+     },
+     "execution_count": 209,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "daydevly['Weekday']"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 211,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Tuesday'"
+      ]
+     },
+     "execution_count": 211,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "daydevly['WeekdayDescription']"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 214,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "datimeper = daydevly['TimePeriod']"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 218,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "numdetim = len(datimeper)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 225,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "07:00:00\n",
+      "12:00:00\n",
+      "12:00:00\n",
+      "17:00:00\n",
+      "09:00:00\n",
+      "11:00:00\n",
+      "11:00:00\n",
+      "13:00:00\n",
+      "13:00:00\n",
+      "15:00:00\n",
+      "15:00:00\n",
+      "17:00:00\n",
+      "17:00:00\n",
+      "19:00:00\n"
+     ]
+    }
+   ],
+   "source": [
+    "for numd in range(0, numdetim):\n",
+    "    print(datimeper[numd]['StartTime'])\n",
+    "    \n",
+    "    print(datimeper[numd]['EndTime'])"
+   ]
   },
   {
    "cell_type": "code",
