--- a/artcgallery.ipynb
+++ b/artcgallery.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 209,
    "metadata": {
     "collapsed": true
    },
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 210,
    "metadata": {
     "collapsed": true
    },
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 211,
    "metadata": {
     "collapsed": false
    },
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 212,
    "metadata": {
     "collapsed": false
    },
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 213,
    "metadata": {
     "collapsed": true
    },
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 214,
    "metadata": {
     "collapsed": true
    },
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 215,
    "metadata": {
     "collapsed": false
    },
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 216,
    "metadata": {
     "collapsed": true
    },
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 217,
    "metadata": {
     "collapsed": true
    },
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 218,
    "metadata": {
     "collapsed": false
    },
@@ -128,7 +128,7 @@
        "['30']"
       ]
      },
-     "execution_count": 113,
+     "execution_count": 218,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -139,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 219,
    "metadata": {
     "collapsed": false
    },
@@ -150,7 +150,7 @@
        "['2015']"
       ]
      },
-     "execution_count": 114,
+     "execution_count": 219,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -161,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 220,
    "metadata": {
     "collapsed": false
    },
@@ -172,7 +172,7 @@
        "['10']"
       ]
      },
-     "execution_count": 115,
+     "execution_count": 220,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -183,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 221,
    "metadata": {
     "collapsed": false
    },
@@ -194,7 +194,7 @@
        "['30']"
       ]
      },
-     "execution_count": 116,
+     "execution_count": 221,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -214,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 222,
    "metadata": {
     "collapsed": false
    },
@@ -228,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 223,
    "metadata": {
     "collapsed": false
    },
@@ -242,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 224,
    "metadata": {
     "collapsed": true
    },
@@ -253,16 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 225,
    "metadata": {
     "collapsed": false
    },
@@ -276,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 226,
    "metadata": {
     "collapsed": false
    },
@@ -287,7 +278,7 @@
        "['2015']"
       ]
      },
-     "execution_count": 120,
+     "execution_count": 226,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -298,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 227,
    "metadata": {
     "collapsed": false
    },
@@ -309,7 +300,7 @@
        "['10']"
       ]
      },
-     "execution_count": 121,
+     "execution_count": 227,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -320,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 228,
    "metadata": {
     "collapsed": false
    },
@@ -331,7 +322,7 @@
        "['30']"
       ]
      },
-     "execution_count": 122,
+     "execution_count": 228,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -342,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 229,
    "metadata": {
     "collapsed": false
    },
@@ -353,7 +344,7 @@
        "'2015-10-30'"
       ]
      },
-     "execution_count": 126,
+     "execution_count": 229,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -364,16 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 230,
    "metadata": {
     "collapsed": true
    },
@@ -384,7 +366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 231,
    "metadata": {
     "collapsed": false
    },
@@ -395,83 +377,154 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 232,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "titlewor = list()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 233,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "partyonconnor-line.png\n",
-      "bawkbawkmudder_udder-line.png\n",
-      "jem-color.png\n",
-      "_SEMPERRVIVUM-color.png\n",
-      "sparktheflame-line.png\n",
-      "LeahTHP-line.png\n",
-      "_SEMPERRVIVUM-line.png\n",
-      "LeahTHP-bw.png\n",
-      "missespills-line.png\n",
-      "partyonconnor-color.png\n",
-      "_SEMPERRVIVUM-gratscale.png\n",
-      "SWEDEDOESMAKEUP-bw.png\n",
-      "SWEDEDOESMAKEUP-line.png\n",
-      "themilkcollective-bw.png\n",
-      "themilkcollective-color.png\n",
-      "jem-bw.png\n",
-      "iwbm-line.png\n",
-      "kirsty-color.png\n",
-      "themilkcollective-line.png\n",
-      "jem-line.png\n",
-      "missespills-bw.png\n",
-      "missespills-color.png\n",
-      "kirsty-line.png\n",
-      "partyonconnor-bw.png\n"
-     ]
+     "data": {
+      "text/plain": [
+       "[]"
+      ]
+     },
+     "execution_count": 233,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "for toar in todayart:\n",
-    "    print(toar)"
+    "titlewor"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![themilkcollective-line](/galleries/2015/10/themilkcollective-line.png)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 234,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "daypost.write()"
+    "galpath = ('/galleries/' + curyr + '/' + curmon + '/' + curday + '/')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 235,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'/galleries/2015/10/30/'"
+      ]
+     },
+     "execution_count": 235,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "galpath"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 236,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "todayart.sort()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 237,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['LeahTHP-bw.png',\n",
+       " 'LeahTHP-line.png',\n",
+       " 'SWEDEDOESMAKEUP-bw.png',\n",
+       " 'SWEDEDOESMAKEUP-line.png',\n",
+       " '_SEMPERRVIVUM-color.png',\n",
+       " '_SEMPERRVIVUM-gratscale.png',\n",
+       " '_SEMPERRVIVUM-line.png',\n",
+       " 'bawkbawkmudder_udder-line.png',\n",
+       " 'iwbm-line.png',\n",
+       " 'jem-bw.png',\n",
+       " 'jem-color.png',\n",
+       " 'jem-line.png',\n",
+       " 'kirsty-color.png',\n",
+       " 'kirsty-line.png',\n",
+       " 'missespills-bw.png',\n",
+       " 'missespills-color.png',\n",
+       " 'missespills-line.png',\n",
+       " 'partyonconnor-bw.png',\n",
+       " 'partyonconnor-color.png',\n",
+       " 'partyonconnor-line.png',\n",
+       " 'sparktheflame-line.png',\n",
+       " 'themilkcollective-bw.png',\n",
+       " 'themilkcollective-color.png',\n",
+       " 'themilkcollective-line.png']"
+      ]
+     },
+     "execution_count": 237,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "todayart"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 238,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "for toar in todayart:\n",
+    "    daypost.write(('!' + '[' + toar.strip('.png') + '](' + galpath + toar + ')\\n'))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 239,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "daypost.close()"
    ]
   }
  ],
